--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ flask-cors = "*"
 flask-sqlalchemy = "*"
 flask-bcrypt = "*"
 flask-jwt-extended = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "2.7"
