--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.2.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-masonry-component": "^6.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "reactstrap": "^7.1.0"
@@ -25,5 +26,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "react-masonry-css": "^1.0.12"
+  }
 }
