--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-export DATABASE_URL='postgresql://postres:lionlion@localhost/ogma'
+export DATABASE_URL='postgresql://postgres:lionlion@localhost/ogma'
 export APP_SETTINGS="config.DevelopmentConfig"
