--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ psycopg2-binary = "*"
 flask-script = "*"
 marshmallow-sqlalchemy = "*"
 flask-mail = "*"
+sqlalchemy = "*"
 
 [requires]
 python_version = "2.7"
