--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ flask-script = "*"
 marshmallow-sqlalchemy = "*"
 flask-mail = "*"
 sqlalchemy = "*"
+flask-heroku = "*"
 
 [requires]
 python_version = "2.7"
