setting up heroku

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ marshmallow-sqlalchemy = "*"
 flask-mail = "*"
 sqlalchemy = "*"
 flask-heroku = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "2.7"
